gitops/infra/addons/sonarqube/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: sonarqube
spec:
  ports:
  - nodePort: 30432
    port: <db port>
    protocol: TCP
    targetPort: <db port>
  selector:
    app: postgres
  sessionAffinity: None
  type: NodePort
