gitops/infra/addons/sonarqube/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  ingressClassName: default
  rules:
  - host: sonarqube.dev.re.kr
    http:
      paths:
      - backend:
          service:
            name: sonarqube-minimal-service
            port:
              number: 9000
        path: /
        pathType: Prefix
